<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultsPage">
    <TextView
        android:id="@+id/titleBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/design_default_color_primary"
        android:fontFamily="sans-serif-medium"
        android:padding="5dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="?android:attr/textColorPrimaryInverse"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/calcScroll"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleBar" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/repeatPaymentHeader"
                android:text="@string/repeatPaymentHeader"
                android:textAlignment="textStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/repeatPaymentAmount"
                android:labelFor="@id/repeatPaymentHeader"
                android:ems="10"
                android:inputType="none"
                android:autofillHints="payment"
                android:padding="16dp"
                android:textAlignment="textEnd"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/termPaymentTotalHeader"
                android:text="@string/paymentTotalHeader"
                android:textAlignment="textStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/termPaymentTotalAmount"
                android:labelFor="@id/termPaymentTotalHeader"
                android:ems="10"
                android:inputType="none"
                android:autofillHints="payment"
                android:padding="16dp"
                android:textAlignment="textEnd"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/interestTotalPaidHeader"
                android:text="@string/interestingTotalPaidHeader"
                android:textAlignment="textStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/interestTotalPaidAmount"
                android:labelFor="@id/interestTotalPaidHeader"
                android:ems="10"
                android:inputType="none"
                android:autofillHints="payment"
                android:padding="16dp"
                android:textAlignment="textEnd"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/principalTotalPaidHeader"
                android:text="@string/principalTotalPaidHeader"
                android:textAlignment="textStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/principalTotalPaidAmount"
                android:labelFor="@id/principalTotalPaidHeader"
                android:ems="10"
                android:inputType="none"
                android:autofillHints="payment"
                android:padding="16dp"
                android:textAlignment="textEnd"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/finalBalanceHeader"
                android:text="@string/finalBalanceHeader"
                android:textAlignment="textStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/finalBalanceAmount"
                android:labelFor="@id/finalBalanceHeader"
                android:ems="10"
                android:inputType="none"
                android:autofillHints="payment"
                android:padding="16dp"
                android:textAlignment="textEnd"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        </LinearLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/backBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@android:drawable/ic_menu_revert"
        android:contentDescription="@string/backBtn"/>

</androidx.constraintlayout.widget.ConstraintLayout>